@@ -7,13 +7,6 @@
     <packaging>war</packaging>
     <name>JEE 10 Services and PrimeFaces Examples</name>
 
-    <parent>
-        <groupId>com.flowlogix</groupId>
-        <artifactId>flowlogix</artifactId>
-        <version>5.2.0-shiro2-m4</version>
-    </parent>
-
-    <!-- parent is only present for testing profiles -->
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
@@ -21,12 +14,11 @@
         <!-- Unfortunately ShrinkWrap only understands the older compiler source / target flags -->
         <maven.compiler.source>${maven.compiler.release}</maven.compiler.source>
         <maven.compiler.target>${maven.compiler.release}</maven.compiler.target>
+        <jdk11SurefireOptions>-Xshare:off</jdk11SurefireOptions>
+        <jdk11FailsafeOptions>--add-opens java.base/java.lang=ALL-UNNAMED</jdk11FailsafeOptions>
+        <webdriver.browser>chromeheadless</webdriver.browser>
 
-        <checkstyle.skip>true</checkstyle.skip>
-        <jacoco.skip>true</jacoco.skip>
-        <groups>none(),UserInterface</groups>
-
-        <flowlogix.version>5.2.0-shiro2-m4</flowlogix.version>
+        <flowlogix.version>5.2.0-shiro2-m5</flowlogix.version>
         <arquillian.version>1.7.0.Alpha13</arquillian.version>
         <shiro.version>2.0.0-lp-nov21-2</shiro.version>
     </properties>
@@ -73,7 +65,7 @@
         <dependency>
             <groupId>org.omnifaces</groupId>
             <artifactId>omnifaces</artifactId>
-            <version>4.0</version>
+            <version>4.0.1</version>
         </dependency>
         <dependency>
             <groupId>org.primefaces</groupId>
@@ -199,59 +191,53 @@
     <build>
         <plugins>
             <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.10.1</version>
+                <configuration>
+                    <compilerArgs>
+                        <arg>-Xlint:deprecation</arg>
+                        <arg>-Xlint:unchecked</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.2</version>
             </plugin>
             <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.0.0-M7</version>
+                <configuration>
+                    <parallel>all</parallel>
+                    <threadCount>10</threadCount>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <argLine>@{jdk11SurefireOptions}</argLine>
+                </configuration>
+            </plugin>
+            <plugin>
                 <artifactId>maven-failsafe-plugin</artifactId>
-                <configuration>
-                    <groups>${groups}</groups>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.0.0-M7</version>
                 <executions>
                     <execution>
-                        <phase>pre-integration-test</phase>
+                        <id>integration-test</id>
                         <goals>
-                            <goal>unpack</goal>
+                            <goal>integration-test</goal>
+                            <goal>verify</goal>
                         </goals>
                     </execution>
                 </executions>
                 <configuration>
-                    <outputDirectory>${flowlogix.basedir}/target/dependency</outputDirectory>
-                    <markersDirectory>${flowlogix.basedir}/target/dependency-maven-plugin-markers</markersDirectory>
+                    <parallel>all</parallel>
+                    <threadCount>10</threadCount>
+                    <redirectTestOutputToFile>true</redirectTestOutputToFile>
+                    <argLine>@{jdk11FailsafeOptions}</argLine>
+                    <systemPropertyVariables>
+                        <arquillian.launch>${arquillian.launch}</arquillian.launch>
+                        <integration.test.mode>${integration.test.mode}</integration.test.mode>
+                        <webdriver.browser>${webdriver.browser}</webdriver.browser>
+                        <webdriver.chrome.binary/>
+                    </systemPropertyVariables>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>start-domain</id>
-                        <phase>pre-integration-test</phase>
-                        <configuration>
-                            <arguments>
-                                <argument>start-domain</argument>
-                            </arguments>
-                        </configuration>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>stop-domain</id>
-                        <phase>post-integration-test</phase>
-                        <configuration>
-                            <arguments>
-                                <argument>stop-domain</argument>
-                            </arguments>
-                        </configuration>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
             <plugin>
                 <groupId>io.github.git-commit-id</groupId>
@@ -283,32 +269,76 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.commonjava.maven.plugins</groupId>
-                <artifactId>directory-maven-plugin</artifactId>
-                <version>1.0</version>
+                <groupId>org.codehaus.gmavenplus</groupId>
+                <artifactId>gmavenplus-plugin</artifactId>
+                <version>2.1.0</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.groovy</groupId>
+                        <artifactId>groovy-all</artifactId>
+                        <version>4.0.6</version>
+                        <scope>runtime</scope>
+                        <type>pom</type>
+                    </dependency>
+                </dependencies>
                 <executions>
                     <execution>
-                        <id>directories</id>
-                        <phase>none</phase>
+                        <id>testGroups</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>execute</goal>
+                        </goals>
+                        <configuration>
+                            <scripts>
+                                <!-- combine individual test profiles into a single test group property -->
+                                <script>https://raw.githubusercontent.com/flowlogix/flowlogix/main/setTestGroupProperties.groovy</script>
+                            </scripts>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>com.soebes.maven.plugins</groupId>
+                <artifactId>echo-maven-plugin</artifactId>
+                <version>0.5.0</version>
+                <executions>
+                    <execution>
+                        <id>echo test groups</id>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>echo</goal>
+                        </goals>
+                        <configuration>
+                            <echos>
+                                <echo>Test Groups (Tags): ${groups}</echo>
+                            </echos>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
         </plugins>
-
-        <pluginManagement>
-            <plugins>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>exec-maven-plugin</artifactId>
-                    <version>3.1.0</version>
-                    <configuration>
-                        <executable>${flowlogix.basedir}/target/dependency/payara6/bin/asadmin</executable>
-                        <skip>${payara.start.skip}</skip>
-                    </configuration>
-                </plugin>
-            </plugins>
-        </pluginManagement>
     </build>
+
+   <profiles>
+        <profile>
+            <id>stress-test</id>
+            <properties>
+                <test_groups>StressTest</test_groups>
+            </properties>
+        </profile>
+        <profile>
+            <id>ui-test</id>
+            <properties>
+                <test_groups>UserInterface</test_groups>
+            </properties>
+        </profile>
+        <profile>
+            <id>all-tests</id>
+            <properties>
+                <test_groups>any()</test_groups>
+            </properties>
+        </profile>
+   </profiles>
 
     <dependencyManagement>
         <dependencies>
